# regime_cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  conanfile.py  sonar-project.properties
.circleci/: config.yml
include/: regime.hpp
include/v1/: enums.hpp  errors.hpp  objects.hpp  requests.hpp  responses.hpp  types.hpp  utils.hpp
include/v1/common/: enums.hpp  errors.hpp  objects.hpp  requests.hpp  responses.hpp  types.hpp  utils.hpp
src/: regime.cpp
src/v1/: errors.cpp  objects.cpp  requests.cpp  responses.cpp  types.cpp
src/v1/common/: errors.cpp  objects.cpp  requests.cpp  responses.cpp  types.cpp
test/v1/: deserialize.cpp  helpers.cpp  helpers.hpp  requests.hpp  responses.hpp  round.cpp  serialize.cpp  test_deserialize.cpp  types.hpp
